--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,19 +1,60 @@
 <resources>
     <string name="app_name">The Tower of Hanoi</string>
-    <string name="moves">Moves: %1$d</string>
 
-    <string name="success_message_optimal">Perfect! You solved the puzzle in %1$d moves!</string>
-    <string name="success_message">You solved the puzzle in %1$d moves! The optimal solution for %2$d disks is %3$d moves.</string>
+    <!-- Success popup strings -->
+    <string name="success_message">You solved the puzzle with %1$d disks!</string>
+    <string name="success_optimal_moves">Optimal solution: %1$d moves</string>
+    <string name="success_title_optimal">Perfect solution!</string>
+    <string name="success_title">Success!</string>
+    <string name="success_moves">Moves: %1$s</string>
+    <string name="success_time">Time: %1$s</string>
+    <string name="this_game"><b>This Game</b></string>
+    <string name="best"><b>Best</b></string>
+
+    <!-- Main menu strings -->
     <string name="main_menu">Main Menu</string>
     <string name="play_again">Play Again</string>
-
     <string name="new_game">New Game</string>
     <string name="load_game">Load Game</string>
     <string name="settings">Settings</string>
     <string name="about">About</string>
-    <string name="title_activity_settings">Settings</string>
 
     <!-- Strings related to Settings -->
     <string name="num_disk_title">Number of Disks</string>
-    <string name="num_disk_message">Choose how many disks are in the game</string>
+    <string name="num_disk_message">Set how many disks are in the game</string>
+    <string name="set_background">Background</string>
+    <string name="background_summary">Set the game background</string>
+    <string name="disk_colors">Disk Appearance</string>
+    <string name="disk_summary">Choose colors or textures for disks</string>
+    <string name="background_success">Background set successfully</string>
+    <string name="background_failure">Background not set</string>
+    <string name="timer_title">Show Timer</string>
+    <string name="show_moves_title">Show Moves</string>
+    <string name="help">Help</string>
+
+    <!-- Game display strings -->
+    <string name="timer_text">Time: %1$s</string>
+    <string name="moves">Moves: %1$d</string>
+
+    <!-- Strings related to disk colors -->
+    <string name="basic_colors">Basic Colors</string>
+
+    <!-- Basic colors -->
+    <string name="black">Black</string>
+    <string name="gray">Gray</string>
+    <string name="yellow">Yellow</string>
+    <string name="blue">Blue</string>
+    <string name="light_blue">Light Blue</string>
+    <string name="green">Green</string>
+    <string name="orange">Orange</string>
+    <string name="purple">Purple</string>
+    <string name="red">Red</string>
+
+    <!-- Additional colors -->
+    <string name="mint_green">Mint Green</string>
+    <string name="royal_blue">Royal Blue</string>
+    <string name="mustard_yellow">Mustard Yellow</string>
+    <string name="heather_purple">Heather Purple</string>
+
+
 </resources>
