--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,7 @@
 <resources>
-    <string name="app_name">The Tower of Hanoi</string>
+    <string name="app_name">Tower of Hanoi</string>
+
+    <string name="integer_holder">%1$d</string>
 
     <!-- Success popup strings -->
     <string name="success_message">You solved the puzzle with %1$d disks!</string>
@@ -19,7 +21,7 @@
     <string name="settings">Settings</string>
     <string name="about">About</string>
 
-    <!-- Strings related to Settings -->
+    <!-- Strings related to settings -->
     <string name="num_disk_title">Number of Disks</string>
     <string name="num_disk_message">Set how many disks are in the game</string>
     <string name="set_background">Background</string>
@@ -31,6 +33,12 @@
     <string name="timer_title">Show Timer</string>
     <string name="show_moves_title">Show Moves</string>
     <string name="help">Help</string>
+
+    <!-- Strings related to high scores -->
+    <string name="high_scores">High Scores</string>
+    <string name="best_moves">Best Moves</string>
+    <string name="best_time">Best Time</string>
+    <string name="none">----</string>
 
     <!-- Game display strings -->
     <string name="timer_text">Time: %1$s</string>
@@ -55,6 +63,35 @@
     <string name="royal_blue">Royal Blue</string>
     <string name="mustard_yellow">Mustard Yellow</string>
     <string name="heather_purple">Heather Purple</string>
+
+    <!-- Disk numbers -->
+    <string name="two">2</string>
+    <string name="three">3</string>
+    <string name="four">4</string>
+    <string name="five">5</string>
+    <string name="six">6</string>
+    <string name="seven">7</string>
+    <string name="eight">8</string>
+    <string name="nine">9</string>
+    <string name="ten">10</string>
+    <string name="eleven">11</string>
+    <string name="twelve">12</string>
+
+    <!-- Tutorial strings -->
+    <string name="move_disks">Moving Disks</string>
+    <string name="size_rule">Size Rule</string>
+    <string name="finish_game">Finishing the Game</string>
+    <string name="tutorial_end">That\'s It!</string>
+    <string name="tutorial_title">How to Play</string>
+    <string name="tutorial_description_1">Tap near a peg to pick up the top disk</string>
+    <string name="tutorial_description_2">Hold and drag to move the disk to another peg</string>
+    <string name="tutorial_description_3">Release to drop the disk on the new peg</string>
+    <string name="tutorial_description_4">You may not place a larger disk on top of a smaller disk</string>
+    <string name="tutorial_description_5">Move all disks to the right peg to complete the puzzle</string>
+
+    <!-- Other -->
+    <string name="base_description">Baseline color</string>
+    <string name="about_tower">About Tower of Hanoi</string>
 
 
 </resources>
